2007-11-05  Sebastien Pouliot  <sebastien@ximian.com>

	* StringTest.cs: Re-enabled TestSbytePtrConstructorOverflow[2,4] 
	since they both works with SVN HEAD.

2007-11-05  Stephane Delcroix  <sdelcroix@novell.com>

	* TimeZoneTest.cs: test for bug #323911

2007-11-03  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : test for bug #330085.

2007-11-03  Gert Driesen  <drieseng@users.sourceforge.net>

	* ArgumentExceptionTest.cs: Added trivial ctor tests.

2007-11-01  Gert Driesen  <drieseng@users.sourceforge.net>

	* EnvironmentTest.cs: Enabled test for bug ##333740.

2007-11-01  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : fixed test for bug #338064 - milliseconds are not
	  fully stored and caused mismatch. Format string was wrong.
	  Added test for local time parsing. 'K' should not cause missing
	  data (it could be empty).

2007-11-01  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : fixed bug #338064.

2007-10-27  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs (InvokeMember_VarArgs): Enable this test.

2007-10-26  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add test for #336936.

2007-10-25  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeTest.cs: Added test for bug #336841. Code formatting.

2007-10-24  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeTest.cs : tests for ReflectionOnlyGetType().

2007-10-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* EnvironmentTest.cs: Added test for bug #333740. Made names of some
	existing tests more clear. Code formatting.

2007-10-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* DateTimeTest.cs: Added test for bug #322510.

2007-10-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* DelegateTest.cs: Enabled test for bug #333647.

2007-10-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* DelegateTest.cs: Added test for bug #333647. Added trivial tests
	that verify null argument checks in CreateDelegate.

2007-10-05  Alp Toker  <alp@atoker.com>
